# Jarvis

./: .env.example  .gitignore  README.md  download_model.py  main.py  pyproject.toml  test_mic.py
audio/: recorder.py
chatbot/: chatbot.py
commands/: chatbot_command.py  command_handler.py  generate_image_command.py  open_command.py  play_command.py  screen_recording_command.py  search_command.py  take_screenshot_command.py  time_management.py  weather_command.py
commands/calendar/: calendar_manager.py  event_handler.py
commands/notes/: note_manager.py  voice_memo.py
commands/system_controls/: brightness_control.py  system_command.py  volume_control.py
commands/voice_processor/: command_processor.py  error_handler.py  natural_language.py
config/: config.yaml  config_manager.py
search/: my_google_search.py
text_to_speech/: text_to_speech.py
transcription/: transcriber.py
utils/: error_handler.py  logger.py  voice_processor.py
voice_activation/: wake_word_detector.py
